Prevent spacing and scrolling issues on small screens

--- a/app/assets/base.css
+++ b/app/assets/base.css
@@ -1,5 +1,6 @@
 body {
   background: #eee;
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, p {
