--- a/app/example/example.component.css
+++ b/app/example/example.component.css
@@ -2,8 +2,11 @@
   font-size: 1.4em;
 }
 
-.content {
-  padding: 0 20px;
+
+@media (min-width: 34em) {
+  .content {
+    padding: 0 20px;
+  }
 }
 
 .blocks {
